--add-modules=java.xml.ws.annotation